# Limen

./: .gitignore  CHANGELOG.md  Claude.md  DEPLOYMENT_SETUP.md  Dockerfile  Over Jumma.csv  PLAN_RUFF_FIX.md  Project.md  README.md  Rules.md  TODO.md  colab_requirements.txt  data.parquet  dev_snippets.py  docker_startup.py  experiment.ipynb  main.py  pyproject.toml  pyrightconfig.json  requirements-docker.txt  requirements.txt  setup.py  test_sfm.py  test_statistical_metrics.py  test_tradeline_multiclass.py  test_tradeline_only.py  test_x0.csv  x_script.py
.cursor/: mcp 2.json  mcp.json
.cursor/rules/: Cursor.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: incident_report.yml  post_mortem_comment.md  rfc_template.md
.github/workflows/: deploy.yml  pr-tests.yml  ruff.yml
.roo/rules/: loop-project-rules.md
.taskmaster/docs/: get_historical_klines.txt
.taskmaster/reports/: task-complexity-report.json
catalysis/: BUG_FIX_SUMMARY.md  OPTIMIZATION_SUMMARY.md  analyze_filtering.py  backtest_momentum_directional.py  backtest_resistance_strategy.py  baseline_param_sweep.py  breakout_regressor_fulldata.py  cohort_assembly.py  cohort_design.json  cohort_design.py  cohort_execution.py  compare_directional_skip38.py  compare_directional_vs_baseline.py  compare_lightgbm_vs_tabpfn.py  compare_original_vs_fixed.py  comparison_summary_skip38.txt  correct_micro_period_analysis.py  debug_fpr_extraction.py  debug_permutation_38.py  debug_uel_issue.py  debug_window_creation.py  demonstrate_fix.py  directional_conditional.py  directional_conditional_comparison.py  discovery_economic_thresholds.py  discovery_fpr_analysis.py  discovery_training_periods.py  fixed_sfm_full_sweep.py  get_best_perm_metrics.py  get_full_metrics_NOW.py  multi_threshold_resistance_finder.py  multi_window_lgbm_vs_tabpfn.py  proper_train_test_micro_analysis.py  quick_test.py  quick_test_standalone.py  regime_classifier_ridge.py  regime_classifier_tabpfn.py  resistance_signal_generator.py  ridge_vs_tabpfn_comparison.py  run_best_permutation.py  (+43 more)
catalysis/utils/: tradeable_regressor.py  tradeline_directional_conditional.py  tradeline_long_binary.py
datasets/: klines_4h_2020_2025.csv  logreg_broad_2_3600.csv
docs/: Backtest.md  Benchmark.md  Code-Style.md  Conserved-Flux-Renormalisation.md  Conserved-Flux-Renormalization.md  Data-Bars.md  Data.md  Experiment-Manifest.md  Features.md  Historical-Data.md  Indicators.md  Log.md  README.md  Regime-Diversified-Opinion-Pools.md  Scalers.md  Semantic-Versioning.md  Single-File-Decoder.md  Single-File-Model.md  Standard-Metrics-Library.md  Transforms.md  Universal-Experiment-Loop.md  Writing-Tests.md
docs/Data Sampling/: Data Sampling Methods.md  Split-Based Megamodels.md
docs/Developer/: Code-Style.md  Contributing-Foundational-SFDs.md  Managing-Incidents.md  README.md  Testing-Explorer-UI.md  Writing-Docstrings.md  Writing-RFC.md  Writing-Tests.md
docs/SFM/: LightGBM-Tradeable-Regressor.md  LightGBM-Tradeline-Multiclass.md  Momentum-Volatility.md
limen/: __init__.py
limen/backtest/: backtest_sequential.py  backtest_snapshot.py
limen/cohort/: regime_pools.py
limen/data/: __init__.py  historical_data.py
limen/experiment/: __init__.py  experiment_core.py  manifest_core.py
limen/features/: __init__.py  active_lines.py  active_quantile_count.py  atr_percent_sma.py  atr_sma.py  breakout_features.py  breakout_percentile_regime.py  close_position.py  close_to_extremes.py  conserved_flux_renormalization.py  distance_from_high.py  distance_from_low.py  dynamic_stop_loss.py  dynamic_target.py  ema_alignment.py  ema_breakout.py  entry_score_microstructure.py  exit_quality.py  feature_aliases.py  gap_high.py  hours_since_big_move.py  hours_since_quantile_line.py  ichimoku_cloud.py  kline_imbalance.py  lagged_features.py  log_returns.py  ma_slope_regime.py  market_regime.py  micro_momentum.py  momentum_confirmation.py  momentum_periods.py  momentum_weight.py  position_in_candle.py  position_in_range.py  price_range_position.py  price_vs_band_regime.py  quantile_flag.py  quantile_line_density.py  range_pct.py  regime_multiplier.py  (+18 more)
limen/indicators/: __init__.py  atr.py  body_pct.py  bollinger_bands.py  cci.py  macd.py  ppo.py  price_change_pct.py  returns.py  roc.py  rsi_sma.py  sma.py  stochastic_oscillator.py  wilder_rsi.py  window_return.py
limen/log/: _experiment_backtest_results.py  _experiment_confusion_metrics.py  _experiment_parameter_correlation.py  (+4 more)
loop/: __init__.py  account.py  backtest.py  data.py  historical_data.py  manifest.py  regime_diversified_opinion_pools.py  tests.py  universal_experiment_loop.py
snippets/: get_uel_run_object.py  test_explorer_locally.py
tests/: run.py  test_account_conviction.py  test_backtest_conviction.py  test_bars.py  test_confidence_filtering_system.py  test_conserved_flux_renormalization.py  test_foundational_sfd.py  test_klines_data_maker_fields.py  test_large_param_space.py  test_manifest_pre_split_random_selector.py  test_regime_diversified_opinion_pools.py  test_tabpfn.py
(+377 files in other folders)
