[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop"
version = "1.26.0"
description = "Bitcoin-first research and trading platform."
readme = "README.md"
authors = [
  { name = "Mikko Kotila", email = "mailme@mikkokotila.com" },
  { name = "Prasenjit Dey" },
  { name = "Arun Raguraman" },
  { name = "Jatin Thakur" },
  { name = "Soujanyaa Boruah" },
  { name = "Ng Wei Da" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.3.1",
  "polars>=1.0.0",
  "scikit-learn>=1.6.1",
  "tqdm>=4.67.0",
  "xgboost",
  "python-dotenv",
  "scipy",
  "tslearn",
  "optuna",
  "clickhouse_connect",
  "lightgbm",
  "wrangle",
  "pyarrow",
  "numpy>=2.2.6",
  "matplotlib",
  "seaborn",
  "streamlit",
  "plotly",
  "ipython",
  "mcp>=0.1.0",
  "playwright",
]

[project.urls]
Homepage = "https://vaquum.fi"
Repository = "https://github.com/vaquum/loop"

[tool.setuptools.packages.find]
where = ["."]
include = ["loop*"]
exclude = ["loop.tests*", "tests*"]
